@@ -1,13 +1,15 @@
 /*
   mysqlfs - MySQL Filesystem
   Copyright (C) 2006 Tsukasa Hamano <code@cuspy.org>
-  $Id: mysqlfs.h,v 1.2 2006/09/04 11:43:29 ludvigm Exp $
+  $Id: mysqlfs.h,v 1.3 2007/03/28 13:05:48 ludvigm Exp $
 
   This program can be distributed under the terms of the GNU GPL.
   See the file COPYING.
 */
 
 #define PATH_MAX 1024
+
+#define DATA_BLOCK_SIZE	4096
 
 #define MIN(a,b)	((a) < (b) ? (a) : (b))
 #define MAX(a,b)	((a) > (b) ? (a) : (b))
